--- a/Website/index.html
+++ b/Website/index.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Pizza Eat Go</title>
+    <style type="text/css">
+
+
+    </style>
 </head>
 <body>
-
+    <h1>Welkom op bij Pizza Eat&Go</h1>
+    <img>
 </body>
 </html>
