--- a/Website/pizzaEat&Go.html
+++ b/Website/pizzaEat&Go.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Pizza Eat Go</title>
+    <style type="text/css">
+
+
+    </style>
 </head>
 <body>
-
+<h1>Welkom op bij Pizza Eat&Go</h1>
+    <div>
+    <img src="">
+</div>
 </body>
 </html>
