--- a/Website/rindex.html
+++ b/Website/rindex.html
@@ -3,22 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <title>Pizza Eat Go</title>
+    <style>
+        body {
+            width: 800px;
+            height: 1200px;
+            background-image: url("Achtergrond.jpg");
+            background-size: auto;
+        }
+        #Div-1{
+            line-height:30px;
+            background-color:#000000;
+            height:50px;
+            width:800px;
+            align-content: center;
+            padding:5px;
+        }
+        #Div-2{
+            line-height:30px;
+            background-color:#000000;
+            height:300px;
+            width:800px;
+            float:left;
+            padding:5px;
+        }
+        #Div-3{
+            line-height:30px;
+            background-color:#ffffff;
+            height:200px;
+            width:375px;
+            float:left;
+            padding:5px;
+        }
+        #Div-4{
+            line-height:30px;
+            background-color:#ffffff;
+            height:200px;
+            width:400px;
+            float:right;
+            padding:5px;
+        }
+
+
+    </style>
 </head>
 <body>
-<div id="wb_Text1" style="position:absolute;left:18px;top:15px;width:250px;height:16px;z-index:0;text-align:left;">
-    <span style="color:#000000;font-family:Arial;font-size:13px;">Welkom bij Pizza Eat&amp;Go</span>
+<div id="Div-1">
+    <span style="color:#ffffff;font-family:Arial;font-size:30px;">Welkom bij Pizza Eat&amp;Go</span>
 </div>
 <br>
-<br>
-<div>
-    <span style="color:#000000;font-family:Arial;font-size:13px;">Aantal pizza's: </span>
-    <input id="Pz-ant" type="number" maxlength="10" minlength="0" min="0" max="10">
+<div id="Div-2">
+    <img src="pizza-banner.png" alt="Pizza banner" width="795">
 </div>
 <br>
+<div id="Div-3">
+    <span style="color:#000000;font-family:Arial;font-size:30px;">Kies een aantal: </span>
+    <br>
+    <br>
+    <span style="color:#000000;font-family:Arial;font-size:30px;">Aantal pizza's: </span>
+    <input id="Pz-ant" type="number" maxlength="10" minlength="0" min="0" max="10"height="50">
+    <br>
+    <br>
+    <span style="color:#000000;font-family:Arial;font-size:30px;">Aantal pasta's: </span>
+    <input id="Ps-ant" type="number" maxlength="10" minlength="0" min="0" max="10" height="50">
+</div>
 <br>
-<div>
-    <span style="color:#000000;font-family:Arial;font-size:13px;">Aantal pasta's: </span>
-    <input id="Ps-ant" type="number" maxlength="10" minlength="0" min="0" max="10">
+<div id="Div-4">
+    <span style="color:#000000;font-family:Arial;font-size:30px;">Subtotaal: </span>
+    <br>
+    <br>
+    <span style="color:#000000;font-family:Arial;font-size:30px;">BTW: </span>
+    <br>
+    <br>
+    <span style="color:#000000;font-family:Arial;font-size:30px;">Totaal: </span>
+
 </div>
 </body>
 </html>
