--- a/Website/rindex.html
+++ b/Website/rindex.html
@@ -121,8 +121,8 @@
             const BTW= 0.21;
             var Price=4.95;
 
-            var NumberOfPizza=parseInt(document.getElementById('Pz-ant').value);
-            var NumberOfPasta=parseInt(document.getElementById('Ps-ant').value);
+            var NumberOfPizza=document.getElementById('Pz-ant').value;
+            var NumberOfPasta=document.getElementById('Ps-ant').value;
 
             var SubTotal=(NumberOfPizza+NumberOfPasta) * Price;
 
