--- a/Website/rindex.html
+++ b/Website/rindex.html
@@ -122,7 +122,7 @@
             var Price=4.95;
 
             var NumberOfPizza=document.getElementById('Pz-ant').value;
-            var NumberOfPasta=document.getElementById('Ps-ant').value;
+            var NmberOfPasta=document.getElementById('Ps-ant').value;
 
             var SubTotal=(NumberOfPizza+NumberOfPasta) * Price;
 
