--- a/Website/rindex.html
+++ b/Website/rindex.html
@@ -5,9 +5,10 @@
     <title>Pizza Eat Go</title>
     <style>
         body {
+            width: auto;
             min-width: 800px;
             min-height: 1200px;
-            background-image: url("Achtergrond.jpg");
+            background-image: url("Reuben/Achtergrond.jpg");
             background-size: auto;
         }
         #Welkom{
@@ -24,7 +25,6 @@
         #Slide{
             line-height:30px;
             background-color:#000000;
-            max-width: 100%;
             height: auto;
             width: auto;
             float:left;
@@ -37,7 +37,7 @@
         }
         #Banner{
             height: auto;
-            width: auto;
+            max-width: 100%;
         }
         #Input{
             line-height:30px;
@@ -116,7 +116,22 @@
     </style>
     <script>
         function onBestelling() {
-            alert("Bestelling verzonden "+);
+            const BTW= 0.21;
+            var Price=4.95;
+
+            var NumberOfPizza=parseInt(document.getElementById('Pz-ant').value);
+            var NumberOfPasta=parseInt(document.getElementById('Ps-ant').value);
+
+            var SubTotal=(NumberOfPizza+NumberOfPasta) * Price;
+
+            var CalcBTW= SubTotal * BTW;
+            var Total=CalcBTW + SubTotal;
+
+            alert("Bestelling: "+"\n" +
+                    "Pizza's:\t"+NumberOfPizza+"\n" +
+                    "Pasta's:\t"+NumberOfPasta+"\n"+
+                    "Prijs: € "+ Total.toFixed(2)+"\n"+
+            "Succesvol aangevraagd!");
         }
     </script>
     <script>
